--- a/clone-telegram-win11/index.html
+++ b/clone-telegram-win11/index.html
@@ -9,6 +9,13 @@
       href="./assets/icon/Telegram-icon-on-transparent-background-PNG.png"
     />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/fontawesome.min.css"
+      integrity="sha512-xX2rYBFJSj86W54Fyv1de80DWBq7zYLn2z0I9bIhQG+rxIF6XVJUpdGnsNHWRa6AvP89vtFupEPDP8eZAtu9qA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
@@ -20,12 +27,14 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
+
     <title>Telegram Win 11</title>
   </head>
   <body>
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-10 mt-5">
+          <!-- navbar -->
           <div class="row nav-bar">
             <div class="col-6">
               <span id="title-app">Unitelegram New</span>
@@ -54,6 +63,37 @@
               </a>
             </div>
           </div>
+          <!-- end navbar -->
+          <!-- main section app -->
+          <section>
+            <div class="row section_main">
+              <div class="col-4">
+                <!-- chart -->
+                <div class="row">
+                  <div class="col-12 Chats p-3">
+                    <img src="./assets/icon/chart-ham.jpg" alt="" />
+                    <span>Chats</span>
+                  </div>
+                </div>
+                <!-- end chart -->
+                <!-- search chat -->
+                <div class="row">
+                  <div class="col-12">
+                    <form>
+                      <input
+                        class="search"
+                        type="text"
+                        placeholder="Search..."
+                      />
+                    </form>
+                  </div>
+                </div>
+                <!-- end search chat -->
+              </div>
+              <div class="col-8"></div>
+            </div>
+          </section>
+          <!-- end main section app -->
         </div>
       </div>
     </div>
