--- a/clone-telegram-win11/index.html
+++ b/clone-telegram-win11/index.html
@@ -89,6 +89,297 @@
                   </div>
                 </div>
                 <!-- end search chat -->
+                <!-- chat section list-->
+                <div class="anyClass">
+                  <!-- chat item -->
+                  <div class="chat-item p-2">
+                    <div class="row">
+                      <div class="col-8">
+                        <div class="row">
+                          <div class="col-3">
+                            <img
+                              src="./assets/icon/avatar-user/Avatar.png"
+                              alt=""
+                            />
+                          </div>
+                          <div class="col-9">
+                            <span class="title-user">Sweeti</span>
+                            <br />
+                            <span class="short-msg">I love you so much!</span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-4">
+                        <div class="row justify-content-end">
+                          <span class="time-mag">8:32 PM</span>
+                          <br />
+                          <img
+                            class="icon-maseage float-end"
+                            src="./assets/icon/pin.png"
+                            alt=""
+                          />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end chat itme -->
+                  <!-- chat item -->
+                  <div class="chat-item p-2">
+                    <div class="row">
+                      <div class="col-8">
+                        <div class="row">
+                          <div class="col-3">
+                            <img
+                              src="./assets/icon/avatar-user/Subtract.png"
+                              alt=""
+                            />
+                          </div>
+                          <div class="col-9">
+                            <span class="title-user">Sweeti</span>
+                            <br />
+                            <span class="short-msg">I love you so much!</span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-4">
+                        <div class="row justify-content-end">
+                          <span class="time-mag">8:32 PM</span>
+                          <br />
+                          <img
+                            class="icon-maseage float-end"
+                            src="./assets/icon/pin.png"
+                            alt=""
+                          />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end chat itme -->
+                  <!-- chat item -->
+                  <div class="chat-item p-2">
+                    <div class="row">
+                      <div class="col-8">
+                        <div class="row">
+                          <div class="col-3">
+                            <img
+                              src="./assets/icon/avatar-user/Subtract2.png"
+                              alt=""
+                            />
+                          </div>
+                          <div class="col-9">
+                            <span class="title-user">Jane Cooper</span>
+                            <br />
+                            <span class="short-msg">I love you so much!</span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-4">
+                        <div class="row justify-content-end">
+                          <span class="time-mag">8:32 PM</span>
+                          <br />
+                          <img
+                            class="icon-maseage float-end"
+                            src="./assets/icon/pin.png"
+                            alt=""
+                          />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end chat itme -->
+                  <!-- chat item -->
+                  <div class="chat-item p-2">
+                    <div class="row">
+                      <div class="col-8">
+                        <div class="row">
+                          <div class="col-3">
+                            <img
+                              src="./assets/icon/avatar-user/Subtract4.png"
+                              alt=""
+                            />
+                          </div>
+                          <div class="col-9">
+                            <span class="title-user">Design Review Chat</span>
+                            <br />
+                            <span class="short-msg">I love you so much!</span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-4">
+                        <div class="row justify-content-end">
+                          <span class="time-mag">8:32 PM</span>
+                          <br />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end chat itme -->
+                  <!-- chat item -->
+                  <div class="chat-item p-2">
+                    <div class="row">
+                      <div class="col-8">
+                        <div class="row">
+                          <div class="col-3">
+                            <img
+                              src="./assets/icon/avatar-user/Subtract5.png"
+                              alt=""
+                            />
+                          </div>
+                          <div class="col-9">
+                            <span class="title-user">R4IN80W</span>
+                            <br />
+                            <span class="short-msg"
+                              >That is how you do it!</span
+                            >
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-4">
+                        <div class="row justify-content-end">
+                          <span class="time-mag">8:32 PM</span>
+                          <br />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end chat itme -->
+                  <!-- chat item -->
+                  <div class="chat-item p-2">
+                    <div class="row">
+                      <div class="col-8">
+                        <div class="row">
+                          <div class="col-3">
+                            <img
+                              src="./assets/icon/avatar-user/Subtract6.png"
+                              alt=""
+                            />
+                          </div>
+                          <div class="col-9">
+                            <span class="title-user">kiguk</span>
+                            <br />
+                            <span class="short-msg">Check out this new!</span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-4">
+                        <div class="row justify-content-end">
+                          <span class="time-mag">8:32 PM</span>
+                          <br />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end chat itme -->
+                  <!-- chat item -->
+                  <div class="chat-item p-2">
+                    <div class="row">
+                      <div class="col-8">
+                        <div class="row">
+                          <div class="col-3">
+                            <img
+                              src="./assets/icon/avatar-user/Avatar7.png"
+                              alt=""
+                            />
+                          </div>
+                          <div class="col-9">
+                            <span class="title-user">480 Design</span>
+                            <br />
+                            <span class="short-msg">Check out this new!</span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-4">
+                        <div class="row justify-content-end">
+                          <span class="time-mag">8:32 PM</span>
+                          <br />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end chat itme -->
+                  <!-- chat item -->
+                  <div class="chat-item p-2">
+                    <div class="row">
+                      <div class="col-8">
+                        <div class="row">
+                          <div class="col-3">
+                            <img
+                              src="./assets/icon/avatar-user/Avatar8.png"
+                              alt=""
+                            />
+                          </div>
+                          <div class="col-9">
+                            <span class="title-user">work group</span>
+                            <br />
+                            <span class="short-msg">🎉</span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-4">
+                        <div class="row justify-content-end">
+                          <span class="time-mag">8:32 PM</span>
+                          <br />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end chat itme -->
+                  <!-- chat item -->
+                  <div class="chat-item p-2">
+                    <div class="row">
+                      <div class="col-8">
+                        <div class="row">
+                          <div class="col-3">
+                            <img
+                              src="./assets/icon/avatar-user/Avatar10.png"
+                              alt=""
+                            />
+                          </div>
+                          <div class="col-9">
+                            <span class="title-user">kiguk</span>
+                            <br />
+                            <span class="short-msg">I love you so much!</span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-4">
+                        <div class="row justify-content-end">
+                          <span class="time-mag">8:32 PM</span>
+                          <br />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end chat itme -->
+                  <!-- chat item -->
+                  <div class="chat-item p-2">
+                    <div class="row">
+                      <div class="col-8">
+                        <div class="row">
+                          <div class="col-3">
+                            <img
+                              src="./assets/icon/avatar-user/Avatar9.png"
+                              alt=""
+                            />
+                          </div>
+                          <div class="col-9">
+                            <span class="title-user">iceChat</span>
+                            <br />
+                            <span class="short-msg">I reeeaally love this</span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-4">
+                        <div class="row justify-content-end">
+                          <span class="time-mag">8:32 PM</span>
+                          <br />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end chat itme -->
+                </div>
+                <!-- end chat section list -->
               </div>
               <div class="col-8"></div>
             </div>
