end section chats

--- a/clone-telegram-win11/index.html
+++ b/clone-telegram-win11/index.html
@@ -103,7 +103,10 @@
                             />
                           </div>
                           <div class="col-9">
-                            <span class="title-user">Sweeti</span>
+                            <span class="title-user-sec">
+                              <img src="./assets/icon/Lock.png" alt="" />
+                              Sweeti</span
+                            >
                             <br />
                             <span class="short-msg">I love you so much!</span>
                           </div>
@@ -135,9 +138,12 @@
                             />
                           </div>
                           <div class="col-9">
-                            <span class="title-user">Sweeti</span>
+                            <span class="title-user">System of a down</span>
                             <br />
-                            <span class="short-msg">I love you so much!</span>
+                            <span class="short-msg-meadia"
+                              ><img src="./assets/icon/Photo.png" alt="" />
+                              Photo</span
+                            >
                           </div>
                         </div>
                       </div>
@@ -169,7 +175,10 @@
                           <div class="col-9">
                             <span class="title-user">Jane Cooper</span>
                             <br />
-                            <span class="short-msg">I love you so much!</span>
+                            <span class="short-msg-meadia">
+                              <img src="./assets/icon/Document.png" alt="" />
+                              Document</span
+                            >
                           </div>
                         </div>
                       </div>
@@ -188,7 +197,7 @@
                   </div>
                   <!-- end chat itme -->
                   <!-- chat item -->
-                  <div class="chat-item p-2">
+                  <div class="chat-item chat-item-select p-2">
                     <div class="row">
                       <div class="col-8">
                         <div class="row">
@@ -201,13 +210,15 @@
                           <div class="col-9">
                             <span class="title-user">Design Review Chat</span>
                             <br />
-                            <span class="short-msg">I love you so much!</span>
+                            <span class="short-msg"
+                              >You: lets do this quick</span
+                            >
                           </div>
                         </div>
                       </div>
                       <div class="col-4">
                         <div class="row justify-content-end">
-                          <span class="time-mag">8:32 PM</span>
+                          <span class="time-mag">Thu</span>
                           <br />
                         </div>
                       </div>
@@ -226,7 +237,13 @@
                             />
                           </div>
                           <div class="col-9">
-                            <span class="title-user">R4IN80W</span>
+                            <span class="title-user">
+                              <img src="./assets/icon/chanel.png" alt="" />
+                              R4IN80W
+                              <img
+                                src="./assets/icon/Checkmark Starburst.png"
+                                alt=""
+                            /></span>
                             <br />
                             <span class="short-msg"
                               >That is how you do it!</span
@@ -255,7 +272,11 @@
                             />
                           </div>
                           <div class="col-9">
-                            <span class="title-user">kiguk</span>
+                            <span class="title-user">
+                              <img src="./assets/icon/Bot.png" alt="" />
+                              kiguk
+                              <img src="./assets/icon/mute.png" alt="" />
+                            </span>
                             <br />
                             <span class="short-msg">Check out this new!</span>
                           </div>
@@ -284,7 +305,7 @@
                           <div class="col-9">
                             <span class="title-user">480 Design</span>
                             <br />
-                            <span class="short-msg">Check out this new!</span>
+                            <span class="short-msg">Bugs and Suggestions</span>
                           </div>
                         </div>
                       </div>
