--- a/clone-telegram-win11/index.html
+++ b/clone-telegram-win11/index.html
@@ -32,7 +32,10 @@
   </head>
   <body>
     <div class="container">
-      <div class="row justify-content-center">
+      <div class="row justify-content-center text-center msg-windos-size">
+        <h3>This app can be used on desktops larger than 1440px :)</h3>
+      </div>
+      <div class="row justify-content-center main-div">
         <div class="col-10 mt-5">
           <!-- navbar -->
           <div class="row nav-bar">
@@ -64,6 +67,7 @@
             </div>
           </div>
           <!-- end navbar -->
+
           <!-- main section app -->
           <section>
             <div class="row section_main">
@@ -419,5 +423,6 @@
       integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
       crossorigin="anonymous"
     ></script>
+    <script src="./index.js"></script>
   </body>
 </html>
