--- a/clone-telegram-win11/index.html
+++ b/clone-telegram-win11/index.html
@@ -16,7 +16,7 @@
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css" />
 
-  <title>Telegram Win 11</title>
+  <title>Telegram Galexy </title>
 </head>
 
 <body>
@@ -50,7 +50,7 @@
         <!-- main section app -->
         <section>
           <div class="row section_main">
-            <div class="col-4">
+            <div class="col-4 caht-list-box">
               <!-- chart -->
               <div class="row">
                 <div class="col-12 Chats p-3">
@@ -80,7 +80,7 @@
                         </div>
                         <div class="col-9">
                           <span class="title-user-sec">
-                            <img src="./assets/icon/Lock.png" alt="" />
+                            <img src="./assets/icon/Lock.svg" alt="" />
                             Sweeti</span>
                           <br />
                           <span class="short-msg">I love you so much!</span>
@@ -91,7 +91,7 @@
                       <div class="row justify-content-end">
                         <span class="time-mag">8:32 PM</span>
                         <br />
-                        <img class="icon-maseage float-end" src="./assets/icon/pin.png" alt="" />
+                        <img class="icon-maseage float-end" src="./assets/icon/pin.svg" alt="" />
                       </div>
                     </div>
                   </div>
@@ -117,7 +117,7 @@
                       <div class="row justify-content-end">
                         <span class="time-mag">8:32 PM</span>
                         <br />
-                        <img class="icon-maseage float-end" src="./assets/icon/pin.png" alt="" />
+                        <img class="icon-maseage float-end" src="./assets/icon/pin.svg" alt="" />
                       </div>
                     </div>
                   </div>
@@ -135,7 +135,7 @@
                           <span class="title-user">Jane Cooper</span>
                           <br />
                           <span class="short-msg-meadia">
-                            <img src="./assets/icon/Document.png" alt="" />
+                            <img src="./assets/icon/Document.svg" alt="" />
                             Document</span>
                         </div>
                       </div>
@@ -144,7 +144,7 @@
                       <div class="row justify-content-end">
                         <span class="time-mag">8:32 PM</span>
                         <br />
-                        <img class="icon-maseage float-end" src="./assets/icon/pin.png" alt="" />
+                        <img class="icon-maseage float-end" src="./assets/icon/pin.svg" alt="" />
                       </div>
                     </div>
                   </div>
@@ -184,9 +184,9 @@
                         </div>
                         <div class="col-9">
                           <span class="title-user">
-                            <img src="./assets/icon/chanel.png" alt="" />
+                            <img src="./assets/icon/chanel.svg" alt="" />
                             R4IN80W
-                            <img src="./assets/icon/Checkmark Starburst.png" alt="" /></span>
+                            <img src="./assets/icon/Checkmark Starburst.svg" alt="" /></span>
                           <br />
                           <span class="short-msg">That is how you do it!</span>
                         </div>
@@ -211,9 +211,9 @@
                         </div>
                         <div class="col-9">
                           <span class="title-user">
-                            <img src="./assets/icon/Bot.png" alt="" />
+                            <img src="./assets/icon/Bot.svg" alt="" />
                             kiguk
-                            <img src="./assets/icon/mute.png" alt="" />
+                            <img src="./assets/icon/mute.svg" alt="" />
                           </span>
                           <br />
                           <span class="short-msg">Check out this new!</span>
@@ -350,13 +350,13 @@
                 </div>
                 <div class="col-6 d-flex justify-content-end ">
                   <a href="#">
-                    <img class="icon-info-chat" src="./assets/icon/phone.png" alt="">
+                    <img class="icon-info-chat" src="./assets/icon/phone.svg" alt="">
                   </a>
                   <a href="#">
-                    <img class="icon-info-chat" src="./assets/icon/searche.png" alt="">
+                    <img class="icon-info-chat" src="./assets/icon/searche.svg" alt="">
                   </a>
                   <a href="#">
-                    <img class="icon-info-chat" src="./assets/icon/more.png" alt="">
+                    <img class="icon-info-chat" src="./assets/icon/more.svg" alt="">
                   </a>
 
                   ّ
@@ -368,7 +368,7 @@
               <div class="row chat-screen">
                 <!-- new pm -->
                 <div class="row justify-content-end">
-                  <img class="imge-pm" src="./assets/icon/voice.png" alt="">
+                  <img class="imge-pm" src="./assets/icon/Group 1642.svg" alt="">
                 </div>
                 <div class="row">
                   <span class="pm-text-resive">Can you explain me how do auto-layouts work?
@@ -378,6 +378,31 @@
                 <!-- new pm -->
                 <div class="row">
                   <span class="pm-text-resive">Nope. What is this?
+                    <span class="time-pm">11:03 Pm</span>
+                  </span>
+                </div>
+                <!-- new pm -->
+                <div class="row justify-content-end">
+                  <span class="pm-text-send">Lorem ipsum, dolor sit amet consectetur adipisicing.
+                    <span class="time-pm">11:03 Pm</span>
+                  </span>
+                </div>
+                <!-- new pm -->
+                <div class="row justify-content-end">
+                  <span class="pm-text-send">lets do this quick
+                    <span class="time-pm">11:03 Pm</span>
+                  </span>
+                </div>
+                <!-- new pm -->
+                <div class="row justify-content-end">
+                  <img class="stik-pm" src="./assets/icon/stik.png" alt="">
+                  <span class="time-pm">11:03 Pm</span>
+
+                </div>
+
+                <!-- new pm -->
+                <div class="row">
+                  <span class="pm-text-resive">What do u think about creating some additional screens for our case?
                     <span class="time-pm">11:03 Pm</span>
                   </span>
                 </div>
@@ -397,39 +422,22 @@
                 <div class="row justify-content-end">
                   <img class="imge-pm" src="./assets/icon/image 12.png" alt="">
                 </div>
-                <!-- new pm -->
-                <div class="row">
-                  <span class="pm-text-resive">What do u think about creating some additional screens for our case?
-                    <span class="time-pm">11:03 Pm</span>
-                  </span>
-                </div>
-                <!-- new pm -->
-                <div class="row justify-content-end">
-                  <span class="pm-text-send">Lorem ipsum, dolor sit amet consectetur adipisicing.
-                    <span class="time-pm">11:03 Pm</span>
-                  </span>
-                </div>
-                <!-- new pm -->
-                <div class="row justify-content-end">
-                  <span class="pm-text-send">lets do this quick
-                    <span class="time-pm">11:03 Pm</span>
-                  </span>
-                </div>
+
               </div>
               <!-- end chat screen -->
               <!-- input caht -->
               <div class="p-2  ">
                 <div class="row box-input-chat ">
                   <div class="col-1">
-                    <img src="./assets/icon/pin-input.png" alt="">
+                    <img src="./assets/icon/pin-input.svg" alt="">
                   </div>
                   <div class="col-9">
                     <input class="input-chat" type="text" placeholder="Write a message...">
                   </div>
                   <div class="col-2">
                     <div>
-                      <img class="float-end mr-3" src="./assets/icon/Emoji.png" alt="">
-                      <img class="float-end " src="./assets/icon/Mic.png" alt="">
+                      <img class="float-end mr-3" src="./assets/icon/Emoji.svg" alt="">
+                      <img class="float-end " src="./assets/icon/Mic.svg" alt="">
                     </div>
                   </div>
 
